# url_shortener

./: .flake8  .gitignore  .isort.cfg  Makefile  README.md  manage.py  pyproject.toml  startup.sh
.github/workflows/: backend-linter.yml  backend-tests.yml  dtests.yml
deployment/local/: .dockerignore  Dockerfile  Dockerfile.worker  docker-compose.yml
deployment/prod/: .dockerignore
docs/: functional-requirements.md  non-functional-requirements.md
docs/adr/: adr-template.md  design-patterns.md  technologies-tools-libraries.md
docs/diagrams/: c4-architecture-diagram.md
rest_api/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
rest_api/config/gunicorn/: gunicorn_dev.py
rest_api/management/commands/: check_db.py  check_or_create_user.py
rest_api/migrations/: 0001_initial.py  0002_alter_shortenedlink_short_code.py  0003_alter_shortenedlink_short_code.py
rest_api/tests/: test_model.py  test_view.py
url_shortener/: asgi.py  celery.py  settings.py  urls.py
